--- a/files/v88_assignments/color-clicker/color_clicker.html
+++ b/files/v88_assignments/color-clicker/color_clicker.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>The Codingdojo ColorClicker!</title>
-        <script type="text/javascript" src='http://code.jquery.com/jquery-1.10.2.min.js'></script> 
+        <script type="text/javascript" src='https://code.jquery.com/jquery-1.10.2.min.js'></script> 
         <style type="text/css">
             *{
                 font-family: sans-serif;
