--- a/files/v88_assignments/debugging-jquery/debugging_jquery.html
+++ b/files/v88_assignments/debugging-jquery/debugging_jquery.html
@@ -2,7 +2,7 @@
 <head>
 	<title>jQuery</title>
 	<link rel="stylesheet" type="text/css" href="debugging_jquery.css">
-	<script type="text/javascript" src='http://code.jquery.com/jquery-1.10.2.min.js'></script>
+	<script type="text/javascript" src='https://code.jquery.com/jquery-1.10.2.min.js'></script>
 	<script type="text/javascript">
 		$(document).ready(function(){
 			$('p, h3, li').hover(function(){
